--- a/assets/css/landscss.css
+++ b/assets/css/landscss.css
@@ -10,6 +10,8 @@
     transform: scale(1.2) rotate(10deg) !important;
 }
 
-/*LAND OF FIRE START*/
-
-/*LAND OF FIRE END*/
+/*LAND OF water START*/
+.kirigakure {
+    width: 100%!important;
+}
+/*LAND OF water END*/
